--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,12 @@
+.dark-theme #contact-form input,
+.dark-theme #contact-form textarea {
+  color: #fff;
+  background: #222;
+  border-color: #444;
+}
+.dark-theme #contact-form label {
+  color: #fff;
+}
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 :root {
